manifest/objects/mkto_si__Integration_Log_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>mkto_si__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Expiration_Days__c</fullName>
        <label>Expiration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Expires__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expires</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Log_Success__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Log Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verifiable</fullName>
                    <default>true</default>
                    <label>Verifiable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Integration Log Setting</label>
    <pluralLabel>Integration Log Settings</pluralLabel>
</CustomObject>